<resources>
    <string name="app_name">BLUEYBUS</string>
    <string name="men_principal">Menú Principal</string>
    <string name="buses">Buses</string>
    <string name="rutas">Rutas</string>
    <string name="pagar_qr">Pagar QR</string>
    <string name="asistente_virtual">Asistente Virtual</string>
    <string name="llegando">Llegando...</string>
    <string name="a_5_minutos">A 5 minutos</string>
    <string name="a_30_minutos">A 30 minutos</string>
    <string name="a_4_minutos">A 4 minutos</string>
    <string name="a">A</string>
    <string name="c">C</string>
    <string name="_87">87</string>
    <string name="_40">40</string>
    <string name="atr_s">Atrás</string>
    <string name="icatras"><![CDATA[<]]></string>
    <string name="cerrar_sesion">Cerrar Sesion</string>
    <string name="eliminar_cuenta">Eliminar Cuenta</string>
    <string name="eli">Eli</string>
    <string name="cer">.</string>
    <string name="buses_que_pasan_por_tu_ubicaci_n">Buses que pasan por tu ubicación:</string>
    <string name="mapa_de_la_ciudad">Mapa de la ciudad</string>
    <string name="continuar">Continuar</string>
    <string name="regresar">Regresar</string>
    <string name="paradero">Paradero</string>
    <string name="destino">Destino</string>
    <string name="monto_a_pagar">Monto a Pagar</string>
    <string name="s_2_50">S/.2.50</string>
    <string name="av_mexico">Av. Mexico</string>
    <string name="covida">Covida</string>
    <string name="yanbal">Yanbal</string>
    <string name="av_brasil">Av. Brasil</string>
    <string name="universitaria">Universitaria</string>
    <string name="izaguirre">Izaguirre</string>
    <string name="no_deseas_usar_el_servicio">¿No deseas usar el servicio?</string>
    <string name="escanea_el_qr">Escanea el QR</string>
</resources>