<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D2DBF1"
    android:gravity="center|top"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button9"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="start|center_vertical"
            android:layout_marginStart="20dp"
            android:background="@drawable/btnatras"
            android:fontFamily="@font/didact_gothic"
            android:gravity="center"
            android:text="@string/icatras"
            android:textColor="#FDFDFD"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:layout_marginStart="13dp"
            android:layout_weight="1"
            android:fontFamily="@font/didact_gothic"
            android:text="@string/atr_s"
            android:textColor="#0A1C39"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="224dp"
        android:fontFamily="@font/fredoka_one"
        android:gravity="center"
        android:scrollbarStyle="outsideInset"
        android:shadowColor="@color/black"
        android:text="@string/buses"
        android:textColor="#0A1C39"
        android:textDirection="anyRtl"
        android:textSize="60sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="393dp"
        android:layout_height="273dp"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="206dp"
            android:layout_height="273dp"
            android:layout_gravity="center"
            android:gravity="center|top"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="160dp"
                android:layout_height="50dp"
                android:layout_margin="8dp"
                android:background="#6072A2"
                android:fontFamily="@font/didact_gothic"
                android:gravity="center"
                android:text="@string/llegando"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="160dp"
                android:layout_height="50dp"
                android:layout_margin="8dp"
                android:background="#6072A2"
                android:fontFamily="@font/didact_gothic"
                android:gravity="center"
                android:text="@string/a_5_minutos"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="160dp"
                android:layout_height="50dp"
                android:layout_margin="8dp"
                android:background="#6072A2"
                android:fontFamily="@font/didact_gothic"
                android:gravity="center"
                android:text="@string/a_30_minutos"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="160dp"
                android:layout_height="50dp"
                android:layout_margin="8dp"
                android:background="#6072A2"
                android:fontFamily="@font/didact_gothic"
                android:gravity="center"
                android:text="@string/a_4_minutos"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="83dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="53dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:background="#2F3E66"
                android:fontFamily="@font/didact_gothic"
                android:gravity="center|fill_vertical"
                android:text="@string/a"
                android:textColor="#FFFFFF" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="53dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:background="#2F3E66"
                android:fontFamily="@font/didact_gothic"
                android:gravity="center|fill_vertical"
                android:text="@string/c"
                android:textColor="#FFFFFF" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="53dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:background="#2F3E66"
                android:fontFamily="@font/didact_gothic"
                android:gravity="center|fill_vertical"
                android:text="@string/_87"
                android:textColor="#FFFFFF" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="53dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:background="#2F3E66"
                android:fontFamily="@font/didact_gothic"
                android:gravity="center|fill_vertical"
                android:text="@string/_40"
                android:textColor="#FFFFFF" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>