<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="#D2DBF1"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button6"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="start|center_vertical"
            android:layout_marginStart="20dp"
            android:background="@drawable/btnatras"
            android:fontFamily="@font/didact_gothic"
            android:gravity="center"
            android:text="@string/icatras"
            android:textColor="#FDFDFD"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:layout_marginStart="13dp"
            android:layout_weight="1"
            android:fontFamily="@font/didact_gothic"
            android:text="@string/atr_s"
            android:textColor="#0A1C39"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="129dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView14"
            android:layout_width="match_parent"
            android:layout_height="125dp"
            android:fontFamily="@font/fredoka_one"
            android:gravity="center"
            android:scrollbarStyle="outsideInset"
            android:shadowColor="@color/black"
            android:text="@string/rutas"
            android:textColor="#0A1C39"
            android:textDirection="anyRtl"
            android:textSize="60sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="402dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="388dp"
            android:contentDescription="@string/mapa_de_la_ciudad"
            app:srcCompat="@drawable/map" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="129dp"
        android:layout_gravity="bottom|center"
        android:background="#6072A2"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView15"
            android:layout_width="305dp"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:fontFamily="@font/didact_gothic"
            android:text="@string/buses_que_pasan_por_tu_ubicaci_n"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView16"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:background="#2F3E66"
                android:fontFamily="@font/didact_gothic"
                android:gravity="center|fill_vertical"
                android:text="@string/a"
                android:textColor="#FFFFFF" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:background="#2F3E66"
                android:fontFamily="@font/didact_gothic"
                android:gravity="center|fill_vertical"
                android:text="@string/_87"
                android:textColor="#FFFFFF" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>