<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="#D2DBF1"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button12"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="start|center_vertical"
            android:layout_marginStart="20dp"
            android:background="@drawable/btnatras"
            android:fontFamily="@font/didact_gothic"
            android:gravity="center"
            android:text="@string/icatras"
            android:textColor="#FDFDFD"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView25"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:layout_marginStart="13dp"
            android:layout_weight="1"
            android:fontFamily="@font/didact_gothic"
            android:text="@string/atr_s"
            android:textColor="#0A1C39"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="161dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView26"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/fredoka_one"
            android:gravity="center"
            android:scrollbarStyle="outsideInset"
            android:shadowColor="@color/black"
            android:text="@string/pagar_qr"
            android:textColor="#0A1C39"
            android:textDirection="anyRtl"
            android:textSize="60sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="530dp"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="150dp"
            android:layout_height="120dp"
            android:layout_margin="3dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView27"
                android:layout_width="150dp"
                android:layout_height="48dp"
                android:layout_margin="3dp"
                android:background="#2F3E66"
                android:fontFamily="@font/didact_gothic"
                android:gravity="center"
                android:text="@string/paradero"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView29"
                android:layout_width="150dp"
                android:layout_height="56dp"
                android:background="#6072A2"
                android:backgroundTint="#6072A2"
                android:focusable="auto"
                android:fontFamily="@font/didact_gothic"
                android:gravity="center"
                android:text="@string/covida"
                android:textColor="#FFFFFF" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="150dp"
            android:layout_height="120dp"
            android:layout_margin="3dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView28"
                android:layout_width="150dp"
                android:layout_height="48dp"
                android:layout_margin="3dp"
                android:background="#2F3E66"
                android:fontFamily="@font/didact_gothic"
                android:gravity="center"
                android:text="@string/destino"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView30"
                android:layout_width="150dp"
                android:layout_height="56dp"
                android:background="#6072A2"
                android:backgroundTint="#6072A2"
                android:focusable="auto"
                android:fontFamily="@font/didact_gothic"
                android:gravity="center"
                android:text="@string/av_brasil"
                android:textColor="#FFFFFF" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView31"
            android:layout_width="257dp"
            android:layout_height="48dp"
            android:layout_margin="3dp"
            android:background="#2F3E66"
            android:fontFamily="@font/didact_gothic"
            android:gravity="center"
            android:text="@string/escanea_el_qr"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="158dp"
            android:layout_height="176dp"
            app:srcCompat="@drawable/qr" />
    </LinearLayout>
</LinearLayout>